examples/without-hostname/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service-without-hostname
  labels:
    k8s-app: nginx-service-without-hostname
spec:
  ports:
  - port: 90
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    k8s-app: nginx-service-without-hostname
