examples/without-hostname/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: echoheaders-without-hostname
  labels:
    app: echoheaders
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: echoheaders
