examples/without-hostname/ingress-tls.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: simplelb-tls-without-hostname
  annotations:
    rdns.rancher.io/protocol: 'https'
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - simplelb-tls-without-hostname.default.zzb88678.w.niusmallnan.com
    secretName: simplelb-tls-without-hostname
  rules:
  - host: simplelb-tls-without-hostname.default.zzb88678.w.niusmallnan.com
    http:
      paths:
      - path: /xxx
        backend:
          serviceName: echoheaders-without-hostname
          servicePort: 80
      - path: /yyy
        backend:
          serviceName: echoheaders-without-hostname
          servicePort: 80
