examples/without-hostname/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: simplelb-without-hostname
spec:
  backend:
    serviceName: nginx-service-without-hostname
    servicePort: 90
